--- a/Map/map.html
+++ b/Map/map.html
@@ -187,6 +187,7 @@
         <div class="layer-controls" aria-label="Map display controls">
           <button id="layerModeBtn">Switch to Cluster View</button>
           <button id="borderToggleBtn">Hide Newark Border</button>
+          <button id="legendToggleBtn" aria-pressed="true">Hide Map Legend</button>
         </div>
       </div>
     </aside>
