--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
         <span></span><span></span><span></span>
       </button>
       <ul class="menu">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="story.html">Story</a></li>
-        <li><a href="gallery.html">Gallery</a></li>
-        <li><a href="./Map/map.html">Fast vs. Fresh Food Map</a></li>
-        <li><a href="kpi-builder.html">KPI Builder</a></li>
+        <li><a href="./">Home</a></li>
+        <li><a href="story/">Story</a></li>
+        <li><a href="gallery/">Gallery</a></li>
+        <li><a href="Map/">Fast vs. Fresh Food Map</a></li>
+        <li><a href="kpi-builder/">KPI Builder</a></li>
         <li><a href="#kpis">Data Visualization</a></li>
         <li><a href="#team">Team</a></li>
       </ul>
@@ -73,7 +73,7 @@
   </section>
 
   <!-- GALLERY SECTION -->
-  <!-- (Gallery section removed; now on gallery.html) -->
+  <!-- (Gallery section removed; now on gallery/) -->
 
   <section id="about" class="content-section">
     <h2>About the Project</h2>
@@ -297,11 +297,11 @@
   </footer>
 
   <nav id="mobileNav" class="offcanvas" aria-label="Site">
-    <a href="index.html">Home</a>
-    <a href="story.html">Story</a>
-    <a href="gallery.html">Gallery</a>
-    <a href="./Map/map.html">Fast vs. Fresh Food Map</a>
-    <a href="kpi-builder.html">KPI Builder</a>
+    <a href="./">Home</a>
+    <a href="story/">Story</a>
+    <a href="gallery/">Gallery</a>
+    <a href="Map/">Fast vs. Fresh Food Map</a>
+    <a href="kpi-builder/">KPI Builder</a>
     <a href="#kpis">Data Visualization</a>
     <a href="#team">Team</a>
   </nav>
