--- a/kpi-builder/index.html
+++ b/kpi-builder/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
@@ -6,6 +6,8 @@
   <title>KPI Builder | Rutgers Newark Bodega Project</title>
   <!-- Google Font & Core Site Styles -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="../style.css" />
+  <link rel="stylesheet" href="../assets/css/nav-mobile.css" />
 
   <!-- External Libraries -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
@@ -287,10 +289,6 @@
       }
     }
   </style>
-  <script type="module" crossorigin src="/assets/kpi-DTf-ZCJk.js"></script>
-  <link rel="modulepreload" crossorigin href="/assets/enhancements-m85IZWfI.js">
-  <link rel="modulepreload" crossorigin href="/assets/paths-CH8zUY__.js">
-  <link rel="stylesheet" crossorigin href="/assets/nav-mobile-BlI6_K0s.css">
 </head>
 <body>
   <!-- Header / Navigation -->
@@ -300,28 +298,28 @@
         <span></span><span></span><span></span>
       </button>
       <ul class="menu">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="story.html">Story</a></li>
-        <li><a href="gallery.html">Gallery</a></li>
-        <li><a href="./Map/map.html">Fast vs. Fresh Food Map</a></li>
-        <li><a href="kpi-builder.html" class="active">KPI Builder</a></li>
-        <li><a href="index.html#kpis">Data Visualization</a></li>
-        <li><a href="index.html#team">Team</a></li>
+        <li><a href="../">Home</a></li>
+        <li><a href="../story/">Story</a></li>
+        <li><a href="../gallery/">Gallery</a></li>
+        <li><a href="../Map/">Fast vs. Fresh Food Map</a></li>
+        <li><a href="../kpi-builder/" class="active">KPI Builder</a></li>
+        <li><a href="../#kpis">Data Visualization</a></li>
+        <li><a href="../#team">Team</a></li>
       </ul>
     </nav>
     <div class="logo-bar">
-      <img src="/assets/7-BxTG1g56.png" alt="NJ STEM Ecosystem Logo" />
-      <img src="/assets/6-C_IZFNb7.png" alt="USDA Logo" />
-      <img src="/assets/5-DZ5g2xn3.png" alt="Rutgers Logo" />
-      <img src="/assets/4-DF4RMAYx.png" alt="BCC Logo" />
+      <img src="../images/7.png" alt="NJ STEM Ecosystem Logo" />
+      <img src="../images/6.png" alt="USDA Logo" />
+      <img src="../images/5.png" alt="Rutgers Logo" />
+      <img src="../images/4.png" alt="BCC Logo" />
     </div>
   </header>
 
   <!-- Hero Section -->
-  <section class="hero">
+  <section class="hero hero--kpi">
     <div class="hero-text">
       <h1>KPI Builder</h1>
-      <p>Interactively model supply-chain margins across roles—from farm to distributor to bodega.</p>
+      <p>Interactively model supply-chain margins across rolesâ€”from farm to distributor to bodega.</p>
     </div>
   </section>
 
@@ -366,23 +364,23 @@
                   <tr><td><strong>Produce</strong></td><td>The exact crop or item (acts as the unique key).</td></tr>
                   <tr><td><strong>Category</strong></td><td>Broad food group (<em>Fruit, Vegetable, Herb, etc.</em>) so the dashboard can apply group-level assumptions.</td></tr>
                   <tr><td><strong>Retail Price $/lb</strong></td><td>Shelf price shoppers pay per pound, taken from USDA-ERS national averages (editable).</td></tr>
-                  <tr><td><strong>Retail Margin %</strong></td><td>Retailer’s target gross-profit percentage on that item (default ≈ 37 %).</td></tr>
+                  <tr><td><strong>Retail Margin %</strong></td><td>Retailerâ€™s target gross-profit percentage on that item (default â‰ˆ 37 %).</td></tr>
                   <tr><td><strong>Retail Handling $/lb</strong></td><td>In-store labor, utilities, packaging, and other costs per pound (default $0.15 for fruit/veg, $0.50 for herbs).</td></tr>
-                  <tr><td><strong>Bodega Shrink %</strong></td><td>Percent of product lost inside the store to spoilage or theft; model subtracts this before profit calc (defaults ≈ 11–12 %).</td></tr>
-                  <tr><td><strong>Farm Markup %</strong></td><td>Grower’s desired markup added to production cost (default 15 %).</td></tr>
+                  <tr><td><strong>Bodega Shrink %</strong></td><td>Percent of product lost inside the store to spoilage or theft; model subtracts this before profit calc (defaults â‰ˆ 11â€“12 %).</td></tr>
+                  <tr><td><strong>Farm Markup %</strong></td><td>Growerâ€™s desired markup added to production cost (default 15 %).</td></tr>
                   <tr><td><strong>Farm Cost $/lb</strong></td><td>Estimated cost for the farm to grow, harvest, cool, and pack one retail-ready pound.</td></tr>
-                  <tr><td><strong>Farm Sale $/lb</strong></td><td>Actual price the farm receives: <code>Farm Cost × (1 + Farm Markup %)</code>.</td></tr>
+                  <tr><td><strong>Farm Sale $/lb</strong></td><td>Actual price the farm receives: <code>Farm Cost Ã— (1 + Farm Markup %)</code>.</td></tr>
                   <tr><td><strong>Farm Shrink %</strong></td><td>Post-harvest loss before the load leaves the farm (default 2 %).</td></tr>
                   <tr><td><strong>Dist. Handling $/lb</strong></td><td>Cooling, storage, trucking, and admin cost for the distributor (default $0.22 fruit, $0.20 veg, $1.00 herbs).</td></tr>
-                  <tr><td><strong>Dist. Margin %</strong></td><td>Distributor’s target gross-profit percentage (default 12 %).</td></tr>
-                  <tr><td><strong>Dist. Sale $/lb</strong></td><td>Price charged by the distributor: <code>(Farm Sale + Dist. Handling) × (1 + Dist. Margin %)</code>.</td></tr>
+                  <tr><td><strong>Dist. Margin %</strong></td><td>Distributorâ€™s target gross-profit percentage (default 12 %).</td></tr>
+                  <tr><td><strong>Dist. Sale $/lb</strong></td><td>Price charged by the distributor: <code>(Farm Sale + Dist. Handling) Ã— (1 + Dist. Margin %)</code>.</td></tr>
                   <tr><td><strong>Dist. Shrink %</strong></td><td>Loss in the warehouse or during transit (default 4 %).</td></tr>
                   <tr><td><strong>Qty lbs</strong></td><td>Planned volume in pounds you expect to move for this item (user editable; powers the totals).</td></tr>
-                  <tr><td><strong>Farm Gross Profit $/lb</strong></td><td>Extra cents the farm keeps on each pound after costs: <code>Farm Sale − Farm Cost</code> (read-only).</td></tr>
+                  <tr><td><strong>Farm Gross Profit $/lb</strong></td><td>Extra cents the farm keeps on each pound after costs: <code>Farm Sale âˆ’ Farm Cost</code> (read-only).</td></tr>
                   <tr><td><strong>Farm Gross Margin %</strong></td><td>Farm gross profit expressed as a percent of Farm Sale price.</td></tr>
-                  <tr><td><strong>Dist. Gross Profit $/lb</strong></td><td>Distributor’s leftover cents per pound after paying the farm and its own handling cost.</td></tr>
+                  <tr><td><strong>Dist. Gross Profit $/lb</strong></td><td>Distributorâ€™s leftover cents per pound after paying the farm and its own handling cost.</td></tr>
                   <tr><td><strong>Dist. Gross Margin %</strong></td><td>Distributor gross profit as a percent of Dist. Sale price.</td></tr>
-                  <tr><td><strong>Bodega Gross Profit $/lb</strong></td><td>Store’s leftover cents per pound after paying the distributor, subtracting shrink, and covering retail handling costs.</td></tr>
+                  <tr><td><strong>Bodega Gross Profit $/lb</strong></td><td>Storeâ€™s leftover cents per pound after paying the distributor, subtracting shrink, and covering retail handling costs.</td></tr>
                   <tr><td><strong>Bodega Gross Margin %</strong></td><td>That gross profit written as a percent of the shelf price.</td></tr>
                 </tbody>
               </table>
@@ -404,82 +402,82 @@
         <th>KPI</th>
         <th>Formula (column names)</th>
         <th>Why it matters &amp; how to read</th>
-        <th>If the number looks <strong>too low</strong> …</th>
-        <th>If the number looks <strong>very high</strong> …</th>
+        <th>If the number looks <strong>too low</strong> â€¦</th>
+        <th>If the number looks <strong>very high</strong> â€¦</th>
       </tr>
     </thead>
     <tbody>
       <tr>
         <td><strong>Farm&nbsp;Gross&nbsp;Profit&nbsp;per&nbsp;Pound</strong></td>
-        <td><code>Farm Sale $/lb − Farm Cost $/lb</code></td>
+        <td><code>Farm Sale $/lb âˆ’ Farm Cost $/lb</code></td>
         <td>How many cents the farm retains on each pound after all growing, harvesting, cooling, and packing costs.</td>
         <td>
           Raise sale price to distributor; trim production costs (inputs, labor, packaging); improve yield to spread fixed costs.
         </td>
-        <td>Consider reinvesting in quality upgrades or paying down debt—avoid over-pricing the market.</td>
+        <td>Consider reinvesting in quality upgrades or paying down debtâ€”avoid over-pricing the market.</td>
       </tr>
       <tr>
         <td><strong>Farm Gross Margin&nbsp;%</strong></td>
-        <td><code>(Farm GP $/lb ÷ Farm Sale $/lb) × 100</code></td>
-        <td>Percentage profit. Many produce farms aim for <strong>15–25&nbsp;%</strong>.</td>
+        <td><code>(Farm GP $/lb Ã· Farm Sale $/lb) Ã— 100</code></td>
+        <td>Percentage profit. Many produce farms aim for <strong>15â€“25&nbsp;%</strong>.</td>
         <td>Same levers as above; also verify markup&nbsp;% is realistic.</td>
         <td>If above 30&nbsp;% for a staple crop you may risk losing buyers.</td>
       </tr>
       <tr>
         <td><strong>Distributor Gross Profit&nbsp;per&nbsp;Pound</strong></td>
-        <td><code>Dist. Sale $/lb − Farm Sale $/lb − Dist. Handling $/lb</code></td>
-        <td>Left-over cents for wholesaler after paying the farm and covering cooling, storage, trucking, and labor (goal&nbsp;8–15 ¢).</td>
+        <td><code>Dist. Sale $/lb âˆ’ Farm Sale $/lb âˆ’ Dist. Handling $/lb</code></td>
+        <td>Left-over cents for wholesaler after paying the farm and covering cooling, storage, trucking, and labor (goal&nbsp;8â€“15 Â¢).</td>
         <td>Negotiate lower farm price; raise distributor margin&nbsp;% ; cut fuel or warehouse costs.</td>
         <td>Use cushion to offer volume discounts or invest in better cold-chain equipment.</td>
       </tr>
       <tr>
         <td><strong>Distributor Gross Margin&nbsp;%</strong></td>
-        <td><code>(Dist. GP $/lb ÷ Dist. Sale $/lb) × 100</code></td>
-        <td>Efficiency score—most regional produce houses run <strong>10–15&nbsp;%</strong>.</td>
-        <td>Below 8&nbsp;%: route may be unprofitable—revisit prices or drop slow items.</td>
+        <td><code>(Dist. GP $/lb Ã· Dist. Sale $/lb) Ã— 100</code></td>
+        <td>Efficiency scoreâ€”most regional produce houses run <strong>10â€“15&nbsp;%</strong>.</td>
+        <td>Below 8&nbsp;%: route may be unprofitableâ€”revisit prices or drop slow items.</td>
         <td>Over 18&nbsp;% could trigger retailer push-back; consider strategic discounts.</td>
       </tr>
       <tr>
         <td><strong>Bodega Gross Profit&nbsp;per&nbsp;Pound</strong></td>
-        <td><code>(Retail Price $/lb × (1 − Bodega Shrink % /100)) − Dist. Sale $/lb − Retail Handling $/lb</code></td>
-        <td>Store’s cents after paying distributor, factoring spoilage/theft, and in-store handling. Target <strong>35–45 ¢</strong>.</td>
+        <td><code>(Retail Price $/lb Ã— (1 âˆ’ Bodega Shrink % /100)) âˆ’ Dist. Sale $/lb âˆ’ Retail Handling $/lb</code></td>
+        <td>Storeâ€™s cents after paying distributor, factoring spoilage/theft, and in-store handling. Target <strong>35â€“45 Â¢</strong>.</td>
         <td>Raise shelf price; run promos to cut shrink; reduce handling costs.</td>
         <td>Leverage surplus for specials to draw traffic or upgrade displays.</td>
       </tr>
       <tr>
         <td><strong>Bodega Gross Margin&nbsp;%</strong></td>
-        <td><code>(Bodega GP $/lb ÷ Retail Price $/lb) × 100</code></td>
+        <td><code>(Bodega GP $/lb Ã· Retail Price $/lb) Ã— 100</code></td>
         <td>Percent margin. Supermarkets average ~<strong>37&nbsp;%</strong>.</td>
         <td>Below 25&nbsp;%: under-pricing or wasting too much.</td>
         <td>Above 45&nbsp;%: check competitiveness; shoppers may trade down.</td>
       </tr>
       <tr>
         <td><strong>Total Quantity&nbsp;(lbs)</strong></td>
-        <td>Σ Quantity lbs for visible rows</td>
+        <td>Î£ Quantity lbs for visible rows</td>
         <td>Planned volume for selected crops.</td>
-        <td>—</td>
-        <td>—</td>
+        <td>â€”</td>
+        <td>â€”</td>
       </tr>
       <tr>
         <td><strong>Total Revenue&nbsp;($)</strong></td>
-        <td>If Farm → Σ(Farm Sale $/lb × Qty) <br>Distributor → Σ(Dist. Sale $/lb × Qty) <br>Bodega → Σ(Retail Price $/lb × (1 − Shrink&nbsp;%) × Qty)</td>
+        <td>If Farm â†’ Î£(Farm Sale $/lb Ã— Qty) <br>Distributor â†’ Î£(Dist. Sale $/lb Ã— Qty) <br>Bodega â†’ Î£(Retail Price $/lb Ã— (1 âˆ’ Shrink&nbsp;%) Ã— Qty)</td>
         <td>Top-line sales dollars for chosen role, adjusted for shrink when viewing as Bodega.</td>
         <td>Increase quantity, price, or both; trim shrink (retail role).</td>
         <td>Check capacity (acreage, truck or shelf space) to handle volume.</td>
       </tr>
       <tr>
         <td><strong>Total Gross Profit&nbsp;($)</strong></td>
-        <td>Role-specific GP per pound × Qty, summed for visible rows</td>
+        <td>Role-specific GP per pound Ã— Qty, summed for visible rows</td>
         <td>Absolute earnings for the batch.</td>
         <td>Adjust per-pound GP levers starting with highest-volume items.</td>
-        <td>Reinvest; ensure long-term demand isn’t hurt.</td>
+        <td>Reinvest; ensure long-term demand isnâ€™t hurt.</td>
       </tr>
       <tr>
         <td><strong>Average Gross Margin&nbsp;%</strong></td>
-        <td>(Total Gross Profit ÷ Total Revenue) × 100</td>
-        <td>Weighted margin across everything selected—big-picture health.</td>
+        <td>(Total Gross Profit Ã· Total Revenue) Ã— 100</td>
+        <td>Weighted margin across everything selectedâ€”big-picture health.</td>
         <td>Below benchmark: focus on low-margin items or renegotiate large contracts.</td>
-        <td>Above benchmark: great—monitor competitor prices to stay sustainable.</td>
+        <td>Above benchmark: greatâ€”monitor competitor prices to stay sustainable.</td>
       </tr>
     </tbody>
   </table>
@@ -506,32 +504,32 @@
                 <tbody>
                   <tr>
                     <th scope="row">1</th>
-                    <td><strong>USDA ERS – Fruit &amp; Vegetable Prices</strong> (interactive tables with national average retail prices per pound)</td>
+                    <td><strong>USDA ERS â€“ Fruit &amp; Vegetable Prices</strong> (interactive tables with national average retail prices per pound)</td>
                     <td><a href="https://www.ers.usda.gov/data-products/fruit-and-vegetable-prices" target="_blank" rel="noopener">View</a></td>
                   </tr>
                   <tr>
                     <th scope="row">2</th>
-                    <td><strong>USDA ERS – Price Spreads from Farm to Consumer</strong> (farm-share percentages for fresh fruits and vegetables)</td>
+                    <td><strong>USDA ERS â€“ Price Spreads from Farm to Consumer</strong> (farm-share percentages for fresh fruits and vegetables)</td>
                     <td><a href="https://www.ers.usda.gov/data-products/price-spreads-from-farm-to-consumer" target="_blank" rel="noopener">View</a></td>
                   </tr>
                   <tr>
                     <th scope="row">3</th>
-                    <td><strong>USDA ERS – Food Dollar Series, 2023 Chart of Note</strong> (wholesale-trade share = 11.4 ¢ of the food dollar)</td>
+                    <td><strong>USDA ERS â€“ Food Dollar Series, 2023 Chart of Note</strong> (wholesale-trade share = 11.4 Â¢ of the food dollar)</td>
                     <td><a href="https://www.ers.usda.gov/data-products/charts-of-note/chart-detail?chartId=110567" target="_blank" rel="noopener">View</a></td>
                   </tr>
                   <tr>
                     <th scope="row">4</th>
-                    <td><strong>USDA ERS – Chart of Note: Supermarket shrink varies by type of fresh fruit and vegetable</strong> (shrink averages = 12.6 % fruit / 11.6 % veg)</td>
+                    <td><strong>USDA ERS â€“ Chart of Note: Supermarket shrink varies by type of fresh fruit and vegetable</strong> (shrink averages = 12.6 % fruit / 11.6 % veg)</td>
                     <td><a href="https://www.ers.usda.gov/data-products/charts-of-note/chart-detail?chartId=79033" target="_blank" rel="noopener">View</a></td>
                   </tr>
                   <tr>
                     <th scope="row">5</th>
-                    <td><strong>USDA ERS – Updated Supermarket Shrink Estimates for Fresh Foods</strong> (full methodology PDF, EIB-155)</td>
+                    <td><strong>USDA ERS â€“ Updated Supermarket Shrink Estimates for Fresh Foods</strong> (full methodology PDF, EIB-155)</td>
                     <td><a href="https://www.ers.usda.gov/sites/default/files/_laserfiche/publications/44100/EIB-155.pdf" target="_blank" rel="noopener">PDF</a></td>
                   </tr>
                   <tr>
                     <th scope="row">6</th>
-                    <td><strong>International Fresh Produce Association – Supermarket Produce Department Benchmarks (2024)</strong> (reports 37 % average produce gross margin)</td>
+                    <td><strong>International Fresh Produce Association â€“ Supermarket Produce Department Benchmarks (2024)</strong> (reports 37 % average produce gross margin)</td>
                     <td><a href="https://www.freshproduce.com/resources/retail/supermarket-produce-department-benchmarks/" target="_blank" rel="noopener">View</a></td>
                   </tr>
                 </tbody>
@@ -547,7 +545,7 @@
   <div class="offcanvas offcanvas-end" tabindex="-1" id="columnOptions">
     <div class="offcanvas-header">
       <h5 class="offcanvas-title">Column Options</h5>
-      <button type="button" class="btn-close" id="closeCanvas" aria-label="Close">×</button>
+      <button type="button" class="btn-close" id="closeCanvas" aria-label="Close">Ã—</button>
     </div>
     <div class="offcanvas-body">
       <h6 class="mb-2">Column Visibility</h6>
@@ -562,18 +560,20 @@
   <div class="offcanvas-backdrop" id="offcanvasBackdrop"></div>
 
   <nav id="mobileNav" class="offcanvas" aria-label="Site">
-    <a href="index.html">Home</a>
-    <a href="story.html">Story</a>
-    <a href="gallery.html">Gallery</a>
-    <a href="./Map/map.html">Fast vs. Fresh Food Map</a>
-    <a href="kpi-builder.html">KPI Builder</a>
-    <a href="index.html#kpis">Data Visualization</a>
-    <a href="index.html#team">Team</a>
+    <a href="../">Home</a>
+    <a href="../story/">Story</a>
+    <a href="../gallery/">Gallery</a>
+    <a href="../Map/">Fast vs. Fresh Food Map</a>
+    <a href="../kpi-builder/">KPI Builder</a>
+    <a href="../#kpis">Data Visualization</a>
+    <a href="../#team">Team</a>
   </nav>
   <div id="navOverlay" class="overlay" hidden></div>
+  <script type="module" src="/src/pages/kpi-builder.js"></script>
 
   <!-- KPI Builder Script -->
 
   <!-- Site-wide JS (hamburger & misc) -->
 </body>
 </html> 
+
